2004-02-18  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* tcllib_version.tcl: Moving mainline to 1.6.0.1 to distinguish
	  development from the released version.

2004-02-16  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* modules/ripemd: New module: RIPEMD message-digest implementation
	* installed_modules.tcl: Added new module.

2004-02-15  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.6 ========================
	* 

2004-02-14  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* README-1.5.txt -> README-1.6.txt
	* INSTALL.txt
	* tcllib_version.tcl

	  We have too many places which use the Tcllib CVS head under the
	  designation Tcllib 1.5. Because of that the next officially
	  released version is called Tcllib 1.6, skipping the number
	  1.5. This should differentiate cleanly between the various
	  instances of Tcllib/CVS floating around and this release, and
	  avoid any confusion about what is which.

2004-02-13  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* sak.tcl (release): Made functional, added the code which extends
	  all the ChangeLogs with the release notice.
	  (gd-assemble): Extended to exclude SCCS and BitKeeper files from
	  the distribution.
	  (gd-gen-packages): Fixed problem with missing global variable.

	* all.tcl: 'getErrorMessage' and 'tooManyMessage' renamed to
	  'wrongNumArgs' anfd 'tooManyArg'. Also placed the common
	  constraints (checking Tcl version: 8.3 only, 8.3+, 8.4+) in
	  here, and removed their declaration from all test files using
	  them.

	* README-1.5.txt: Updated logger version info to 0.3.

2004-01-24  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* sak.tcl: Added a very primitive approval mechanism to suppress
	  output from the package comparison in 'status'. Allows to work
	  through a set of problems with repeated comparison, approving
	  packages when done.
